--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expo-dropdown-select-list",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "description": "⭐ React Native Select List Equivalent to Html's Select with options\"",
   "main": "index.ts",
   "types": "index.d.ts",
@@ -42,18 +42,19 @@
     "multiple",
     "multi"
   ],
-  "devDependencies": {
-    "@types/react": "^18.0.25",
-    "@types/react-native": "^0.70.6",
-    "react": "^18.2.0",
-    "react-native": "0.68.2",
-    "typescript": "^4.8.4",
-    "react-dom": "^18.2.0"
-  },
   "author": "MontebellerZ",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/MontebellerZ/expo-multi-dropdown-select-list/issues"
   },
-  "homepage": "https://github.com/MontebellerZ/expo-multi-dropdown-select-list#readme"
+  "homepage": "https://github.com/MontebellerZ/expo-multi-dropdown-select-list#readme",
+  "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
+    "@types/react": "^18.2.14",
+    "@types/react-native": "^0.72.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-native": "^0.72.0",
+    "typescript": "^5.1.3"
+  }
 }
