--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "expo-dropdown-select-list",
-  "version": "2.0.2",
-  "description": "⭐ React Native Select List Equivalent to Html's Select with options\"",
+  "name": "expo-modal-dropdown",
+  "version": "1.0.1",
+  "description": "React Native Select List",
   "main": "index.ts",
   "types": "index.d.ts",
   "scripts": {
@@ -48,13 +48,14 @@
     "url": "https://github.com/MontebellerZ/expo-multi-dropdown-select-list/issues"
   },
   "homepage": "https://github.com/MontebellerZ/expo-multi-dropdown-select-list#readme",
-  "dependencies": {
+  "devDependencies": {
+    "@types/react-dom": "^18.2.6",
     "@expo/vector-icons": "^13.0.0",
     "@types/react": "^18.2.14",
     "@types/react-native": "^0.72.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "^0.72.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.6"
   }
 }
